--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -31,43 +31,43 @@
       <section>
         <ul>
           <li>
-            <img src="./images/proect1.jpg" alt="" />
+            <img src="../imges/laptop.jpg" alt="" />
             <h3>Технокряк</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/proect2.jpg" alt="" />
+            <img src="../imges/basketball.jpg" alt="" />
             <h3>Постер New Orlean vs Golden Star</h3>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/proect3.jpg" alt="" />
+            <img src="../imges/fish.jpg" alt="" />
             <h3>Ресторан Seafood</h3>
             <p>Додаток</p>
-            <img src="./images/proect4.jpg" alt="" />
+            <img src="../imges/headphones.jpg" alt="" />
             <h3>Проєкт Prime</h3>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/proect5.jpg" alt="" />
+            <img src="../imges/boxes.jpg" alt="" />
             <h3>Проєкт Boxes</h3>
             <p>Додаток</p>
           </li>
           <li>
-            <img src="./images/proect6.jpg" alt="" />
+            <img src="../imges/monitor.jpg" alt="" />
             <h3>Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/proect7.jpg" alt="" />
+            <img src="../imges/book.jpg" alt="" />
             <h3>Видання Limited Edition</h3>
             <p>Дизайн</p>
-            <img src="./images/proect8.jpg" alt="" />
+            <img src="../imges/paper.jpg" alt="" />
             <h3>Проєкт LAB</h3>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/proect9.jpg" alt="" />
+            <img src="../imges/laptop2.jpg" alt="" />
             <h3>Growing Business</h3>
             <p>Додаток</p>
           </li>
