--- a/index.html
+++ b/index.html
@@ -5,43 +5,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
 
   <body>
-    <header>
-      <a class="header-logo_link" href="./index.html"
-        >Web<span class="header-logo_link_decor">Studio</span></a
+    <header class="page-header">
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-decor">Studio</span></a
       >
-      <nav>
-        <ul>
-          <li>
-            <a class="header-menu_link active" href="./index.html">Студія</a>
+      <nav class="header-nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link active" href="./index.html">Студія</a>
           </li>
-          <li>
-            <a class="header-menu_link" href="./pages/portfolio.html"
-              >Портфоліо</a
-            >
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/portfolio.html">Портфоліо</a>
           </li>
-          <li><a class="header-menu_link" href="#">Контакти</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a
-            class="header-contacts_link active"
-            href="mailto:info@devstudio.com"
+      <ul class="contacts-list">
+        <li class="contacts-item">
+          <a class="contacts-link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li>
-          <a class="header-contacts_link" href="tel:+380961111111"
+        <li class="contacts-item">
+          <a class="contacts-link" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
@@ -49,34 +53,34 @@
     </header>
     <main>
       <!-- секція герой -->
-      <section class="hero-section">
+      <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button class="hero-button" type="button">Замовити послугу</button>
       </section>
       <!-- нащі переваги -->
-      <section>
-        <ul>
-          <li>
+      <section class="benefits">
+        <ul class="benefits-list">
+          <li class="benefits-item">
             <h2 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h2>
             <p class="benefits-description">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції..
             </p>
           </li>
-          <li>
+          <li class="benefits-item">
             <h2 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h2>
             <p class="benefits-description">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li>
+          <li class="benefits-item">
             <h2 class="benefits-title">ПЛАНУВАННЯ</h2>
             <p class="benefits-description">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
+          <li class="benefits-item">
             <h2 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
             <p class="benefits-description">
               Значимість цих проблем настільки очевидна, що реалізація планових
@@ -86,27 +90,29 @@
         </ul>
       </section>
       <!-- чим ми займаемося -->
-      <section>
-        <h2 class="field-title">Чим ми займаємося</h2>
-        <ul>
-          <li>
+      <section class="employ">
+        <h2 class="employ-title">Чим ми займаємося</h2>
+        <ul class="employ-list">
+          <li class="employ-item">
             <img
-              class="field-img"
+              class="employ-img"
               src="./imges/computer.jpg"
               alt="програмують"
             />
           </li>
-          <li><img class="field-img" src="./imges/tell.jpg" alt="вчятся" /></li>
-          <li>
-            <img class="field-img" src="./imges/tablet.jpg" alt="малюють" />
+          <li class="employ-item">
+            <img class="employ-img" src="./imges/tell.jpg" alt="вчятся" />
+          </li>
+          <li class="employ-item">
+            <img class="employ-img" src="./imges/tablet.jpg" alt="малюють" />
           </li>
         </ul>
       </section>
       <!-- наша команда -->
-      <section class="team-section">
+      <section class="team">
         <h2 class="team-title">Наша команда</h2>
-        <ul>
-          <li>
+        <ul class="team-list">
+          <li class="team-item">
             <img
               class="team-img"
               src="./imges/igor.jpg"
@@ -115,48 +121,48 @@
             <h3 class="team-name">Ігор Дем'яненко</h3>
             <p class="team-position">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img class="team-img" src="./imges/olga.jpg" alt="Ольга Рєпіна" />
             <h3 class="team-name">Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p class="team-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               class="team-img"
               src="./imges/mikola.jpg"
               alt="Микола Тарасов"
             />
             <h3 class="team-name">Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p class="team-position">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               class="team-img"
               src="./imges/mixailo.jpg"
               alt="Михайло Єрмаков"
             />
             <h3 class="team-name">Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p class="team-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="page-footer">
-      <a class="footer-logo_link" href="./index.html"
-        >Web <span class="footer-logo_link_decor"> Studio</span></a
+      <a class="logo" href="./index.html"
+        >Web <span class="logo-decor"> Studio</span></a
       >
-      <address>
+      <address class="footer-address">
         <a
-          class="footer-address_link"
+          class="address-link"
           href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5358109,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?hl=ru&entry=ttu"
           >м. Київ, пр-т Лесі Українки, 26</a
         >
-        <ul>
-          <li>
-            <a class="footer-contacts_link" href="mailto:info@devstudio.com"
+        <ul class="address-list">
+          <li class="item">
+            <a class="contacts-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
-            <a class="footer-contacts_link" href="tel:+380961111111"
+            <a class="contacts-link" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
           </li>
