--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -3,88 +3,141 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/prtfolio.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="../index.html">Студія</a></li>
-          <li><a href="../pages/portfolio.html">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+    <header class="page-header">
+      <a class="logo" href="../index.html"
+        >Web<span class="logo-decor">Studio</span></a
+      >
+      <nav class="header-nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Студія</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="./portfolio.html">Портфоліо</a>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contacts-list">
+        <li class="contacts-item">
+          <a class="contacts-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="contacts-item">
+          <a class="contacts-link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
-      <ul>
-        <li><button type="button">Усі</button></li>
-        <li><button type="button">Веб-сайти</button></li>
-        <li><button type="button">Додатки</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
-      </ul>
-      <section>
-        <ul>
-          <li>
-            <img src="../imges/laptop.jpg" alt="" />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+      <section class="portfolio">
+        <ul class="button-list">
+          <li class="button-item">
+            <button class="filter-button" type="button">Усі</button>
           </li>
-          <li>
-            <img src="../imges/basketball.jpg" alt="" />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+          <li class="button-item">
+            <button class="filter-button" type="button">Веб-сайти</button>
           </li>
-          <li>
-            <img src="../imges/fish.jpg" alt="" />
-            <h3>Ресторан Seafood</h3>
-            <p>Додаток</p>
-            <img src="../imges/headphones.jpg" alt="" />
-            <h3>Проєкт Prime</h3>
-            <p>Маркетинг</p>
+          <li class="button-item">
+            <button class="filter-button" type="button">Додатки</button>
           </li>
-          <li>
-            <img src="../imges/boxes.jpg" alt="" />
-            <h3>Проєкт Boxes</h3>
-            <p>Додаток</p>
+          <li class="button-item">
+            <button class="filter-button" type="button">Дизайн</button>
           </li>
-          <li>
-            <img src="../imges/monitor.jpg" alt="" />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+          <li class="button-item">
+            <button class="filter-button" type="button">Маркетинг</button>
           </li>
-          <li>
-            <img src="../imges/book.jpg" alt="" />
-            <h3>Видання Limited Edition</h3>
-            <p>Дизайн</p>
-            <img src="../imges/paper.jpg" alt="" />
-            <h3>Проєкт LAB</h3>
-            <p>Маркетинг</p>
+        </ul>
+
+        <ul class="card-list">
+          <li class="card-item">
+            <img class="card-img" src="../imges/laptop.jpg" alt="" />
+            <h3 class="card-title">Технокряк</h3>
+            <p class="card-position">Веб-сайт</p>
           </li>
-          <li>
-            <img src="../imges/laptop2.jpg" alt="" />
-            <h3>Growing Business</h3>
-            <p>Додаток</p>
+          <li class="card-item">
+            <img class="card-img" src="../imges/basketball.jpg" alt="" />
+            <h3 class="card-title">Постер New Orlean vs Golden Star</h3>
+            <p class="card-position">Дизайн</p>
+          </li>
+          <li class="card-item">
+            <img class="card-img" src="../imges/fish.jpg" alt="" />
+            <h3 class="card-title">Ресторан Seafood</h3>
+            <p class="card-position">Додаток</p>
+          </li>
+          <li class="card-item">
+            <img class="card-img" src="../imges/headphones.jpg" alt="" />
+            <h3 class="card-title">Проєкт Prime</h3>
+            <p class="card-position">Маркетинг</p>
+          </li>
+          <li class="card-item">
+            <img class="card-img" src="../imges/boxes.jpg" alt="" />
+            <h3 class="card-title">Проєкт Boxes</h3>
+            <p class="card-position">Додаток</p>
+          </li>
+          <li class="card-item">
+            <img class="card-img" src="../imges/monitor.jpg" alt="" />
+            <h3 class="card-title">Inspiration has no Borders</h3>
+            <p class="card-position">Веб-сайт</p>
+          </li>
+          <li class="card-item">
+            <img class="card-img" src="../imges/book.jpg" alt="" />
+            <h3 class="card-title">Видання Limited Edition</h3>
+            <p class="card-position">Дизайн</p>
+          </li>
+          <li class="card-item">
+            <img class="card-img" src="../imges/paper.jpg" alt="" />
+            <h3 class="portfolio-title">Проєкт LAB</h3>
+            <p class="portfolio-position">Маркетинг</p>
+          </li>
+          <li class="card-item">
+            <img class="portfolio-img" src="../imges/laptop2.jpg" alt="" />
+            <h3 class="portfolio-title">Growing Business</h3>
+            <p class="portfolio-position">Додаток</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
+    <footer class="page-footer">
+      <a class="logo" href="./index.html"
+        >Web <span class="logo-decor"> Studio</span></a
+      >
+      <address class="footer-address">
         <a
+          class="address-link"
           href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5358109,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?hl=ru&entry=ttu"
           >м. Київ, пр-т Лесі Українки, 26</a
         >
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul class="address-list">
+          <li class="item">
+            <a class="contacts-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+            <a class="contacts-link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </address>
