--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="../css/prtfolio.css" />
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header container">
       <a class="logo" href="../index.html"
         >Web<span class="logo-decor">Studio</span></a
       >
@@ -52,7 +52,7 @@
       </ul>
     </header>
     <main>
-      <section class="portfolio">
+      <section class="portfolio container">
         <ul class="button-list">
           <li class="button-item">
             <button class="filter-button" type="button">Усі</button>
@@ -120,7 +120,8 @@
         </ul>
       </section>
     </main>
-    <footer class="page-footer">
+     <footer class="page-footer">
+      <div class="container">
       <a class="logo" href="./index.html"
         >Web <span class="logo-decor"> Studio</span></a
       >
@@ -140,6 +141,7 @@
             >
           </li>
         </ul>
+        </div>
       </address>
     </footer>
   </body>
