--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <header class="page-header container">
       <a class="logo" href="./index.html"
         >Web<span class="logo-decor">Studio</span></a
       >
@@ -54,11 +54,13 @@
     <main>
       <!-- секція герой -->
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-button" type="button">Замовити послугу</button>
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero-button" type="button">Замовити послугу</button>
+        </div>
       </section>
       <!-- нащі переваги -->
-      <section class="benefits">
+      <section class="benefits container">
         <ul class="benefits-list">
           <li class="benefits-item">
             <h2 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h2>
@@ -90,7 +92,7 @@
         </ul>
       </section>
       <!-- чим ми займаемося -->
-      <section class="employ">
+      <section class="employ container">
         <h2 class="employ-title">Чим ми займаємося</h2>
         <ul class="employ-list">
           <li class="employ-item">
@@ -110,44 +112,47 @@
       </section>
       <!-- наша команда -->
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./imges/igor.jpg"
-              alt="Ігор Дем'яненко"
-            />
-            <h3 class="team-name">Ігор Дем'яненко</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img class="team-img" src="./imges/olga.jpg" alt="Ольга Рєпіна" />
-            <h3 class="team-name">Ольга Рєпіна</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./imges/mikola.jpg"
-              alt="Микола Тарасов"
-            />
-            <h3 class="team-name">Микола Тарасов</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./imges/mixailo.jpg"
-              alt="Михайло Єрмаков"
-            />
-            <h3 class="team-name">Михайло Єрмаков</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./imges/igor.jpg"
+                alt="Ігор Дем'яненко"
+              />
+              <h3 class="team-name">Ігор Дем'яненко</h3>
+              <p class="team-position">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img class="team-img" src="./imges/olga.jpg" alt="Ольга Рєпіна" />
+              <h3 class="team-name">Ольга Рєпіна</h3>
+              <p class="team-position">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./imges/mikola.jpg"
+                alt="Микола Тарасов"
+              />
+              <h3 class="team-name">Микола Тарасов</h3>
+              <p class="team-position">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./imges/mixailo.jpg"
+                alt="Михайло Єрмаков"
+              />
+              <h3 class="team-name">Михайло Єрмаков</h3>
+              <p class="team-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
+      <div class="container">
       <a class="logo" href="./index.html"
         >Web <span class="logo-decor"> Studio</span></a
       >
@@ -167,6 +172,7 @@
             >
           </li>
         </ul>
+        </div>
       </address>
     </footer>
   </body>
