--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <body>
     <header class="page-header container">
+      <div class="container">
       <a class="logo" href="./index.html"
         >Web<span class="logo-decor">Studio</span></a
       >
@@ -50,10 +51,12 @@
           >
         </li>
       </ul>
+      </div>
     </header>
     <main>
       <!-- секція герой -->
       <section class="hero">
+        
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button">Замовити послугу</button>
@@ -61,6 +64,7 @@
       </section>
       <!-- нащі переваги -->
       <section class="benefits container">
+        <div class="container">
         <ul class="benefits-list">
           <li class="benefits-item">
             <h2 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h2>
@@ -90,9 +94,11 @@
             </p>
           </li>
         </ul>
+        </div>
       </section>
       <!-- чим ми займаемося -->
       <section class="employ container">
+        <div class="container">
         <h2 class="employ-title">Чим ми займаємося</h2>
         <ul class="employ-list">
           <li class="employ-item">
@@ -109,6 +115,7 @@
             <img class="employ-img" src="./imges/tablet.jpg" alt="малюють" />
           </li>
         </ul>
+        </div>
       </section>
       <!-- наша команда -->
       <section class="team">
