--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="../css/prtfolio.css" />
   </head>
   <body>
-    <header class="page-header container">
+    <header class="page-header ">
+      <div class="container">
       <a class="logo" href="../index.html"
         >Web<span class="logo-decor">Studio</span></a
       >
@@ -50,6 +51,7 @@
           >
         </li>
       </ul>
+      </div>
     </header>
     <main>
       <section class="portfolio container">
