--- a/index.html
+++ b/index.html
@@ -24,21 +24,23 @@
 
   <body>
     <header class="page-header container">
-      <div class="container">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-decor">Studio</span></a
-      >
-      <nav class="header-nav">
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-link active" href="./index.html">Студія</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./pages/portfolio.html">Портфоліо</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
-        </ul>
-      </nav>
+      <div class="logo-group">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-decor">Studio</span></a
+        >
+        <nav class="header-nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link active" href="./index.html">Студія</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/portfolio.html">Портфоліо</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
+          </ul>
+        </nav>
+
+      </div>
       <ul class="contacts-list">
         <li class="contacts-item">
           <a class="contacts-link" href="mailto:info@devstudio.com"
@@ -51,7 +53,6 @@
           >
         </li>
       </ul>
-      </div>
     </header>
     <main>
       <!-- секція герой -->
@@ -174,7 +175,10 @@
             <a class="contacts-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
-            <a class="contacts-link" href="tel:+380961111111"
+           
+          </li>
+          <li>
+             <a class="contacts-link" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
           </li>
