--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="../css/prtfolio.css" />
   </head>
   <body>
-    <header class="page-header ">
-      <div class="container">
+    <header class="page-header container ">
+      <div class="logo-group">
       <a class="logo" href="../index.html"
         >Web<span class="logo-decor">Studio</span></a
       >
@@ -39,6 +39,7 @@
           <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
         </ul>
       </nav>
+      </div>
       <ul class="contacts-list">
         <li class="contacts-item">
           <a class="contacts-link" href="mailto:info@devstudio.com"
@@ -51,7 +52,6 @@
           >
         </li>
       </ul>
-      </div>
     </header>
     <main>
       <section class="portfolio container">
@@ -122,7 +122,7 @@
         </ul>
       </section>
     </main>
-     <footer class="page-footer">
+    <footer class="page-footer">
       <div class="container">
       <a class="logo" href="./index.html"
         >Web <span class="logo-decor"> Studio</span></a
@@ -138,7 +138,10 @@
             <a class="contacts-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
-            <a class="contacts-link" href="tel:+380961111111"
+           
+          </li>
+          <li>
+             <a class="contacts-link" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
           </li>
