fix bags in portfolio and index

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
             <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
           </ul>
         </nav>
-
       </div>
       <ul class="contacts-list">
         <li class="contacts-item">
@@ -57,7 +56,6 @@
     <main>
       <!-- секція герой -->
       <section class="hero">
-        
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button">Замовити послугу</button>
@@ -66,56 +64,56 @@
       <!-- нащі переваги -->
       <section class="benefits container">
         <div class="container">
-        <ul class="benefits-list">
-          <li class="benefits-item">
-            <h2 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h2>
-            <p class="benefits-description">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції..
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h2 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h2>
-            <p class="benefits-description">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h2 class="benefits-title">ПЛАНУВАННЯ</h2>
-            <p class="benefits-description">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h2 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-            <p class="benefits-description">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+          <ul class="benefits-list">
+            <li class="benefits-item">
+              <h2 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h2>
+              <p class="benefits-description">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції..
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h2 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h2>
+              <p class="benefits-description">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h2 class="benefits-title">ПЛАНУВАННЯ</h2>
+              <p class="benefits-description">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h2 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+              <p class="benefits-description">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- чим ми займаемося -->
       <section class="employ container">
         <div class="container">
-        <h2 class="employ-title">Чим ми займаємося</h2>
-        <ul class="employ-list">
-          <li class="employ-item">
-            <img
-              class="employ-img"
-              src="./imges/computer.jpg"
-              alt="програмують"
-            />
-          </li>
-          <li class="employ-item">
-            <img class="employ-img" src="./imges/tell.jpg" alt="вчятся" />
-          </li>
-          <li class="employ-item">
-            <img class="employ-img" src="./imges/tablet.jpg" alt="малюють" />
-          </li>
-        </ul>
+          <h2 class="employ-title">Чим ми займаємося</h2>
+          <ul class="employ-list">
+            <li class="employ-item">
+              <img
+                class="employ-img"
+                src="./imges/computer.jpg"
+                alt="програмують"
+              />
+            </li>
+            <li class="employ-item">
+              <img class="employ-img" src="./imges/tell.jpg" alt="вчятся" />
+            </li>
+            <li class="employ-item">
+              <img class="employ-img" src="./imges/tablet.jpg" alt="малюють" />
+            </li>
+          </ul>
         </div>
       </section>
       <!-- наша команда -->
@@ -129,13 +127,17 @@
                 src="./imges/igor.jpg"
                 alt="Ігор Дем'яненко"
               />
-              <h3 class="team-name">Ігор Дем'яненко</h3>
-              <p class="team-position">Product Designer</p>
+              <div class="team-info">
+                <h3 class="team-name">Ігор Дем'яненко</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img class="team-img" src="./imges/olga.jpg" alt="Ольга Рєпіна" />
-              <h3 class="team-name">Ольга Рєпіна</h3>
-              <p class="team-position">Frontend Developer</p>
+              <div class="team-info">
+                <h3 class="team-name">Ольга Рєпіна</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -143,8 +145,10 @@
                 src="./imges/mikola.jpg"
                 alt="Микола Тарасов"
               />
-              <h3 class="team-name">Микола Тарасов</h3>
-              <p class="team-position">Marketing</p>
+              <div class="team-info">
+                <h3 class="team-name">Микола Тарасов</h3>
+                <p class="team-position">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -152,8 +156,10 @@
                 src="./imges/mixailo.jpg"
                 alt="Михайло Єрмаков"
               />
-              <h3 class="team-name">Михайло Єрмаков</h3>
-              <p class="team-position">UI Designer</p>
+              <div class="team-info">
+                <h3 class="team-name">Михайло Єрмаков</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -161,30 +167,29 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-      <a class="logo" href="./index.html"
-        >Web <span class="logo-decor"> Studio</span></a
-      >
-      <address class="footer-address">
-        <a
-          class="address-link"
-          href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5358109,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?hl=ru&entry=ttu"
-          >м. Київ, пр-т Лесі Українки, 26</a
+        <a class="logo" href="./index.html"
+          >Web <span class="logo-decor"> Studio</span></a
         >
-        <ul class="address-list">
-          <li class="item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-           
-          </li>
-          <li>
-             <a class="contacts-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-        </div>
-      </address>
+        <address class="footer-address">
+          <a
+            class="address-link"
+            href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5358109,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?hl=ru&entry=ttu"
+            >м. Київ, пр-т Лесі Українки, 26</a
+          >
+          <ul class="address-list">
+            <li class="item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
