--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -23,22 +23,22 @@
     <link rel="stylesheet" href="../css/prtfolio.css" />
   </head>
   <body>
-    <header class="page-header container ">
+    <header class="page-header container">
       <div class="logo-group">
-      <a class="logo" href="../index.html"
-        >Web<span class="logo-decor">Studio</span></a
-      >
-      <nav class="header-nav">
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-link" href="../index.html">Студія</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="./portfolio.html">Портфоліо</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
-        </ul>
-      </nav>
+        <a class="logo" href="../index.html"
+          >Web<span class="logo-decor">Studio</span></a
+        >
+        <nav class="header-nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Студія</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
+          </ul>
+        </nav>
       </div>
       <ul class="contacts-list">
         <li class="contacts-item">
@@ -76,78 +76,95 @@
         <ul class="card-list">
           <li class="card-item">
             <img class="card-img" src="../imges/laptop.jpg" alt="" />
-            <h3 class="card-title">Технокряк</h3>
-            <p class="card-position">Веб-сайт</p>
+            <div class="card-content">
+              <h3 class="card-title">Технокряк</h3>
+              <p class="card-position">Веб-сайт</p>
+            </div>
           </li>
           <li class="card-item">
             <img class="card-img" src="../imges/basketball.jpg" alt="" />
-            <h3 class="card-title">Постер New Orlean vs Golden Star</h3>
-            <p class="card-position">Дизайн</p>
+            <div class="card-content">
+              <h3 class="card-title">Постер New Orlean vs Golden Star</h3>
+              <p class="card-position">Дизайн</p>
+            </div>
           </li>
           <li class="card-item">
             <img class="card-img" src="../imges/fish.jpg" alt="" />
-            <h3 class="card-title">Ресторан Seafood</h3>
-            <p class="card-position">Додаток</p>
+            <div class="card-content">
+              <h3 class="card-title">Ресторан Seafood</h3>
+              <p class="card-position">Додаток</p>
+            </div>
           </li>
           <li class="card-item">
             <img class="card-img" src="../imges/headphones.jpg" alt="" />
-            <h3 class="card-title">Проєкт Prime</h3>
-            <p class="card-position">Маркетинг</p>
+            <div class="card-content">
+              <h3 class="card-title">Проєкт Prime</h3>
+              <p class="card-position">Маркетинг</p>
+            </div>
           </li>
           <li class="card-item">
             <img class="card-img" src="../imges/boxes.jpg" alt="" />
-            <h3 class="card-title">Проєкт Boxes</h3>
-            <p class="card-position">Додаток</p>
+            <div class="card-content">
+              <h3 class="card-title">Проєкт Boxes</h3>
+              <p class="card-position">Додаток</p>
+            </div>
           </li>
           <li class="card-item">
             <img class="card-img" src="../imges/monitor.jpg" alt="" />
-            <h3 class="card-title">Inspiration has no Borders</h3>
-            <p class="card-position">Веб-сайт</p>
+            <div class="card-content">
+              <h3 class="card-title">Inspiration has no Borders</h3>
+              <p class="card-position">Веб-сайт</p>
+            </div>
           </li>
           <li class="card-item">
             <img class="card-img" src="../imges/book.jpg" alt="" />
-            <h3 class="card-title">Видання Limited Edition</h3>
-            <p class="card-position">Дизайн</p>
+            <div class="card-content">
+              <h3 class="card-title">Видання Limited Edition</h3>
+              <p class="card-position">Дизайн</p>
+            </div>
           </li>
           <li class="card-item">
             <img class="card-img" src="../imges/paper.jpg" alt="" />
-            <h3 class="portfolio-title">Проєкт LAB</h3>
-            <p class="portfolio-position">Маркетинг</p>
+            <div class="card-content">
+              <h3 class="card-title">Проєкт LAB</h3>
+              <p class="card-position">Маркетинг</p>
+            </div>
           </li>
           <li class="card-item">
-            <img class="portfolio-img" src="../imges/laptop2.jpg" alt="" />
-            <h3 class="portfolio-title">Growing Business</h3>
-            <p class="portfolio-position">Додаток</p>
+            <img class="card-img" src="../imges/laptop2.jpg" alt="" />
+            <div class="card-content">
+              <h3 class="card-title">Growing Business</h3>
+              <p class="card-position">Додаток</p>
+            </div>
           </li>
         </ul>
       </section>
     </main>
     <footer class="page-footer">
       <div class="container">
-      <a class="logo" href="./index.html"
-        >Web <span class="logo-decor"> Studio</span></a
-      >
-      <address class="footer-address">
-        <a
-          class="address-link"
-          href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5358109,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?hl=ru&entry=ttu"
-          >м. Київ, пр-т Лесі Українки, 26</a
+        <a class="logo" href="./index.html"
+          >Web <span class="logo-decor"> Studio</span></a
         >
-        <ul class="address-list">
-          <li class="item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-           
-          </li>
-          <li>
-             <a class="contacts-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-        </div>
-      </address>
+        <address class="footer-address">
+          <a
+            class="address-link"
+            href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5358109,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?hl=ru&entry=ttu"
+            >м. Київ, пр-т Лесі Українки, 26</a
+          >
+          <ul class="address-list">
+            <li class="item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
