change flex box

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </head>
 
   <body>
-    <header class="page-header container">
-      <div class="logo-group">
+    <header class="page-header">
+      <div class="container logo-group">
         <a class="logo" href="./index.html"
           >Web<span class="logo-decor">Studio</span></a
         >
