--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -22,9 +22,10 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/prtfolio.css" />
   </head>
+
   <body>
-    <header class="page-header container">
-      <div class="logo-group">
+    <header class="page-header">
+      <div class="container logo-group">
         <a class="logo" href="../index.html"
           >Web<span class="logo-decor">Studio</span></a
         >
