--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -26,8 +26,8 @@
   <body>
     <header class="page-header">
       <div class="container logo-group">
-        <a class="logo" href="../index.html"
-          >Web<span class="logo-decor">Studio</span></a
+        <a class="header-logo" href="../index.html"
+          >Web<span class="header-decor">Studio</span></a
         >
         <nav class="header-nav">
           <ul class="nav-list">
@@ -144,7 +144,7 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-        <a class="logo" href="./index.html"
+        <a class="footer-logo" href="./index.html"
           >Web<span class="logo-decor">Studio</span></a
         >
         <address class="footer-address">
