--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <body>
     <header class="page-header">
       <div class="container logo-group">
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-decor">Studio</span></a
+        <a class="header-logo" href="./index.html"
+          >Web<span class="header-decor">Studio</span></a
         >
         <nav class="header-nav">
           <ul class="nav-list">
@@ -64,7 +64,7 @@
       </section>
       <!-- нащі переваги -->
       <section class="benefits container">
-        <div class="container">
+        <div>
           <ul class="benefits-list">
             <li class="benefits-item">
               <h2 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h2>
@@ -98,7 +98,7 @@
       </section>
       <!-- чим ми займаемося -->
       <section class="employ container">
-        <div class="container">
+        <div>
           <h2 class="employ-title">Чим ми займаємося</h2>
           <ul class="employ-list">
             <li class="employ-item">
@@ -168,7 +168,7 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-        <a class="logo" href="./index.html"
+        <a class="footer-logo" href="./index.html"
           >Web<span class="logo-decor">Studio</span></a
         >
         <address class="footer-address">
