--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         </div>
       </section>
       <!-- нащі переваги -->
-      <section class="benefits container">
-        <div>
+      <section>
+        <div class="benefits container">
           <ul class="benefits-list">
             <li class="benefits-item">
               <h2 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h2>
