use position absolute

--- a/index.html
+++ b/index.html
@@ -113,12 +113,21 @@
                 src="./imges/computer.jpg"
                 alt="програмують"
               />
+              <div class="employ-box">
+                <p class="employ-position">Десктопні додатки</p>
+              </div>
             </li>
             <li class="employ-item">
               <img class="employ-img" src="./imges/tell.jpg" alt="вчятся" />
+              <div class="employ-box">
+                <p class="employ-position">Мобільні додатки</p>
+              </div>
             </li>
             <li class="employ-item">
               <img class="employ-img" src="./imges/tablet.jpg" alt="малюють" />
+              <div class="employ-box">
+                <p class="employ-position">Дизайнерські рішення</p>
+              </div>
             </li>
           </ul>
         </div>
