add js and modal window

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -60,6 +60,7 @@
           </li>
         </ul>
       </div>
+      <div class="header-line"></div>
     </header>
     <main>
       <section class="portfolio container">
@@ -213,6 +214,27 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div>
+          <h2 class="footer-title-2">ПІДПИШІТСЯ НА РЗСИЛКУ</h2>
+          <form>
+            <div class="footer-form-2">
+              <label class="footer-label">
+                <input
+                  type="email"
+                  name="user-email"
+                  class="footer-input"
+                  placeholder="E-mail"
+                />
+              </label>
+              <button type="submit" class="footer-btn">
+                Підписатися
+                <svg class="footer-icon">
+                  <use href="./imges/symbol-defs.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
