--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-button" type="button">Замовити послугу</button>
+          <button class="hero-button" data-modal-open type="button">
+            Замовити послугу
+          </button>
         </div>
       </section>
       <!-- нащі переваги -->
@@ -446,7 +448,92 @@
             </li>
           </ul>
         </div>
+        <div>
+          <h2 class="footer-title-2">ПІДПИШІТСЯ НА РЗСИЛКУ</h2>
+          <form>
+            <div class="footer-form-2">
+              <label class="footer-label">
+                <input
+                  type="email"
+                  name="user-email"
+                  class="footer-input"
+                  placeholder="E-mail"
+                />
+              </label>
+              <button type="submit" class="footer-btn">
+                Підписатися
+                <svg class="footer-icon">
+                  <use href="./imges/symbol-defs.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal is-hidden>
+      <div class="modal">
+        <button class="btn-close" data-modal-close>
+          <svg class="close-icon" preserveAspectRatio="xMinYMin meet">
+            <use href="./imges/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+        <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
+        <form>
+          <label class="modal-label">
+            <span class="modal-label-text"> Ім'я</span>
+            <span class="modal-input-wrapper">
+              <input type="text" name="user-name" class="modal-input" />
+              <svg class="modal-input-icon">
+                <use href="./imges/symbol-defs.svg#icon-vector-menu"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-label">
+            <span class="modal-label-text">Телефон</span>
+            <span class="modal-input-wrapper">
+              <input type="tel" name="user-phone" class="modal-input" />
+              <svg class="modal-input-icon">
+                <use href="./imges/symbol-defs.svg#icon-phone-menu"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-label">
+            <span class="modal-label-text">Пошта</span>
+            <span class="modal-input-wrapper">
+              <input type="email" name="user-email" class="modal-input" />
+              <svg class="modal-input-icon">
+                <use href="./imges/symbol-defs.svg#icon-emale-menu"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-label">
+            <span class="modal-label-text">Коментар</span>
+            <textarea
+              name="user-message"
+              placeholder="Введіть текст"
+              class="modal-textarea"
+            ></textarea>
+          </label>
+          <div class="modal-agreement-wrapper">
+            <input
+              type="checkbox"
+              name="user-agreement"
+              id="user-agreement"
+              value="true"
+              class="modal-agreement"
+            />
+            <label for="user-agreement" class="modal-agreement-label">
+              Погоджуюся з розсилкою та приймаю
+              <a href="#" class="modal-agreement-link">Умови договору</a>
+            </label>
+          </div>
+          <button type="submit" class="modal-submit-btn">Відправити</button>
+        </form>
+      </div>
+    </div>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
