--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -230,7 +230,7 @@
               <button type="submit" class="footer-btn">
                 Підписатися
                 <svg class="footer-icon">
-                  <use href="./imges/symbol-defs.svg#icon-send"></use>
+                  <use href="../imges/symbol-defs.svg#icon-send"></use>
                 </svg>
               </button>
             </div>
